# yew-tutorial

./: .gitignore  Cargo.toml  run
src/: app.rs  fetch.rs  lib.rs
static/: index.html
