[package]
name = "yew-tutorial"
version = "0.1.0"
authors = ["Victor Ermolaev <victorermolaev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.73"
yew = {version = "0.17.4", feature=["fetch"] }
anyhow = "1.0.40"
rand = "0.8.3"
getrandom = {version = "0.2.2", features=["js"]}
serde = "1.0.125"
